@@ -17,6 +17,7 @@ Otherwise your changes will be overwritten the next time you save the extension 
 
 <f:flashMessages />
 
+    <div class="tx-irfaq-catmenu-header">Kategorien:</div>
     <jhe:ul catItems="{catMenus}"/>
 
 </f:section>
